updated and better optimized mobile styles

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <div class="container-fluid">
                 <div class="row d-flex justify-content-between">
                     <div class="col-12 col-md-6 mb-3 px-md-5">
-                        <p class="contact-info col-12 col-md-11">
+                        <p class="contact-info col-12 col-md-11 bio">
                             I believe in the power creativity has to solve any problem big or small. I also believe in
                             the
                             lifelong pursuit of everything
@@ -203,11 +203,11 @@
                             and
                             fulfilling. “Fun-filling,” if you will.
                         </p>
-                        <p class="contact-info col-md-11">
+                        <p class="contact-info col-md-11 bio">
                             Those who know me know that I value humor, authenticity, and empathy above
                             all else.
                         </p>
-                        <p class="contact-info col-md-11">
+                        <p class="contact-info col-md-11 bio">
                             If you share these values and feel I could be of service to you or your organization, I
                             would
                             love to hear from you. Please
@@ -219,7 +219,7 @@
                             Thank you in advance,
                         </p>
                         <div class="col-12">
-                            <img class="col-4 col-md-6 col-lg-4 px-4" src="/images/ja-sig.svg" alt="Jonny">
+                            <img class="col-6 col-md-6 col-lg-4 px-4" src="/images/ja-sig.svg" alt="Jonny">
                         </div>
                     </div>
                     <script type="text/javascript">
