--- a/projects/autoloantools.html
+++ b/projects/autoloantools.html
@@ -45,7 +45,7 @@
                 <div class="container-fluid">
                     <div class="col-12 d-flex justify-content-center">
                         <div class="col-12 col-lg-8">
-                            <div class="row mt-5 mb-5">
+                            <div class="row mt-0 mt-md-3 mb-5">
                                 <h2 class="my-4 project-title">Auto Loan Tracker</h2>
                                 <h2 class="modal-subhead">Problem</h2>
                                 <div class="col-12">
@@ -65,7 +65,7 @@
                             </div>
                             <div class="row mb-5">
                                 <h2 class="modal-subhead">My Role</h2>
-                                <div class="col-4">
+                                <div class="col-12 col-md-4">
                                     <ul>
                                         <li>Research</li>
                                         <li>Wireframing</li>
@@ -74,7 +74,7 @@
                                         <li>Content Strategy</li>
                                     </ul>
                                 </div>
-                                <div class="col-8">
+                                <div class="col-12 col-md-8">
                                     My role included working closely with the research team to conduct a series of
                                     empathy
                                     interviews,
@@ -126,7 +126,7 @@
                             Due at Payoff, Paid Off, Paid Off Early, and Extra Due.
                         </p>
                         <div class="col-12 col-md-11 d-flex flex-column context-box">
-                            <img class="col-12 p-5" src="/images/project-images/autoloantools-alt3.png">
+                            <img class="col-12 p-lg-5" src="/images/project-images/autoloantools-alt3.png">
                         </div>
                     </div>
                     <div class="row py-5 mb-5 d-flex justify-content-center autoloantools-image-container-1">
@@ -135,9 +135,9 @@
                             Possible Auto Loan Tracker detail states including Default, Early Payoff Projected, and
                             Additional Balance Projected.
                         </p>
-                        <img class="col-8 col-md-4" src="/images/project-images/autoloantools-alt4.png">
-                        <img class="col-8 col-md-4" src="/images/project-images/autoloantools-alt5.png">
-                        <img class="col-8 col-md-4" src="/images/project-images/autoloantools-alt6.png">
+                        <img class="col-10 col-md-4" src="/images/project-images/autoloantools-alt4.png">
+                        <img class="col-6 col-md-4" src="/images/project-images/autoloantools-alt5.png">
+                        <img class="col-6 col-md-4" src="/images/project-images/autoloantools-alt6.png">
                     </div>
                     <hr class="my-5">
                     <div class="col-12 d-flex justify-content-center">
@@ -158,7 +158,7 @@
                             </div>
                             <div class="row mb-5">
                                 <h2 class="modal-subhead">My Role</h2>
-                                <div class="col-4">
+                                <div class="col-12 col-md-4">
                                     <ul>
                                         <li>Research</li>
                                         <li>Wireframing</li>
@@ -167,7 +167,7 @@
                                         <li>Content Strategy</li>
                                     </ul>
                                 </div>
-                                <div class="col-8">
+                                <div class="col-12 col-md-8">
                                     My role was to lead the design work, working closely with our product, analyst,
                                     content, and
                                     research teams to understand what parameters worked best for customers and kept them
@@ -278,10 +278,10 @@
                             context
                             is provided to help inform customers as they progress.
                         </p>
-                        <div class="col-6 col-md-6 d-flex flex-column">
+                        <div class="col-10 col-md-6 d-flex flex-column">
                             <img class="col-12" src="/images/project-images/autoloantools-gc3.png">
                         </div>
-                        <div class="col-6 col-md-6 d-flex flex-column">
+                        <div class="col-10 col-md-6 d-flex flex-column">
                             <img class="col-12" src="/images/project-images/autoloantools-gc4.png">
                         </div>
                     </div>
@@ -289,8 +289,8 @@
             </div>
             <div class="modal-footer">
                 <div class="col-12 d-flex justify-content-center">
-                    <div class="d-flex align-items-center footer-content">
-                        <a class="btn-secondary" href="/index.html">Close Project</a>
+                    <div class="d-flex flex-wrap align-items-center justify-content-center footer-content">
+                        <a class="btn-secondary mx-1 mb-3" href="/index.html">Close Project</a>
                     </div>
                 </div>
             </div>
