--- a/projects/generatormakerspace.html
+++ b/projects/generatormakerspace.html
@@ -45,7 +45,7 @@
                 <div class="container-fluid">
                     <div class="col-12 d-flex justify-content-center">
                         <div class="col-12 col-lg-8">
-                            <div class="row mt-5 mb-5">
+                            <div class="row mt-3 mt-md-5 mb-5">
                                 <h2 class="modal-subhead">Challenge</h2>
                                 <div class="col-12">
                                     Create a brand and companion mobile app for Capital One’s Generator Makerspace that
@@ -60,14 +60,14 @@
                             </div>
                             <div class="row mb-5">
                                 <h2 class="modal-subhead">My Role</h2>
-                                <div class="col-4">
+                                <div class="col-12 col-md-4">
                                     <ul>
                                         <li>UX/UI Design</li>
                                         <li>Content Strategy</li>
                                         <li>Game Design</li>
                                     </ul>
                                 </div>
-                                <div class="col-8">
+                                <div class="col-12 col-md-8">
                                     I designed branding for the space and an end-to-end companion app experience
                                     including the
                                     core user experience, UI/UX design, and interactive game.
@@ -103,13 +103,13 @@
                             easter
                             egg when the user taps on the Generator logo.
                         </p>
-                        <div class="col-8 col-md-4 d-flex flex-column">
+                        <div class="col-10 col-md-4 d-flex flex-column">
                             <img class="col-12" src="/images/project-images/generator4.png">
                         </div>
-                        <div class="col-8 col-md-4 d-flex flex-column">
+                        <div class="col-10 col-md-4 d-flex flex-column">
                             <img class="col-12" src="/images/project-images/generator5.png">
                         </div>
-                        <div class="col-8 col-md-4 d-flex flex-column">
+                        <div class="col-10 col-md-4 d-flex flex-column">
                             <img class="col-12" src="/images/project-images/generator6.png">
                         </div>
                     </div>
@@ -120,10 +120,10 @@
                             Homepage with quick access to content like featured works, a shared schedule, suggested
                             projects, and available tools and materials.
                         </p>
-                        <div class="col-8 col-md-4 d-flex flex-column">
+                        <div class="col-10 col-md-4 d-flex flex-column">
                             <img class="col-12" src="/images/project-images/generator7.png">
                         </div>
-                        <div class="col-8 col-md-4 d-flex flex-column">
+                        <div class="col-10 col-md-4 d-flex flex-column">
                             <img class="col-12" src="/images/project-images/generator8.png">
                         </div>
                     </div>
@@ -133,13 +133,13 @@
                         <p class="col-10 text-center mt-0 mb-4 text-off-white2">
                             Custom built Circuit Breaker game with high score tracking and a shared leaderboard.
                         </p>
-                        <div class="col-8 col-md-4 d-flex flex-column">
+                        <div class="col-10 col-md-4 d-flex flex-column">
                             <img class="col-12" src="/images/project-images/generator-circuitbreaker1.png">
                         </div>
-                        <div class="col-8 col-md-4 d-flex flex-column">
+                        <div class="col-10 col-md-4 d-flex flex-column">
                             <img class="col-12" src="/images/project-images/generator-circuitbreaker2.png">
                         </div>
-                        <div class="col-8 col-md-4 d-flex flex-column">
+                        <div class="col-10 col-md-4 d-flex flex-column">
                             <img class="col-12" src="/images/project-images/generator-circuitbreaker3.png">
                         </div>
                     </div>
