--- a/projects/hueyweather.html
+++ b/projects/hueyweather.html
@@ -45,7 +45,7 @@
                 <div class="container-fluid">
                     <div class="col-12 d-flex justify-content-center">
                         <div class="col-12 col-lg-8">
-                            <div class="row mt-5 mb-5">
+                            <div class="row mt-3 mt-md-5 mb-5">
                                 <h2 class="modal-subhead">Challenge</h2>
                                 <div class="col-12">
                                     Merging a passion for weather forecasting, minimalist design, and trend analysis, I
@@ -154,36 +154,39 @@
                                 you to see trends in the weather around you.
                             </p>
                         </div>
-                        <div class="col-8 col-md-4 d-flex flex-column order-2 order-md-1">
+                        <div class="col-10 col-md-4 d-flex flex-column order-2 order-md-1">
                             <img class="col-12 align-self-center" src="/images/project-images/huey-modal.png">
                         </div>
                     </div>
                     <div class="row py-5 mb-5 d-flex justify-content-center huey-image-container">
                         <h2 class="mb-3 col-12 text-center project-title white-text">Sample Weather Patterns
                         </h2>
-                        <div class="col-8 col-md-4 text-center align-self-center order-1 order-md-1 white-text">
+                        <div class="col-12 col-md-4 text-center align-self-center order-1 order-md-1 white-text">
                             <p class="mb-3">Mt. Everest 8pm on a Wednesday in March</p>
                         </div>
-                        <div class="col-8 col-md-4 text-center align-self-center order-3 order-md-2 white-text">
+                        <div class="col-12 col-md-4 text-center align-self-center order-3 order-md-2 white-text">
                             <p class="mb-3">Austin, Texas 7pm on a Monday in March</p>
                         </div>
-                        <div class="col-8 col-md-4 text-center align-self-center order-5 order-md-3 white-text">
+                        <div class="col-12 col-md-4 text-center align-self-center order-5 order-md-3 white-text">
                             <p class="mb-3">Death Valley 12am on a Wednesday in March</p>
                         </div>
-                        <img class="col-8 col-md-4 order-2 order-md-4" src="/images/project-images/huey-forecast1.png">
-                        <img class="col-8 col-md-4 order-4 order-md-5" src="/images/project-images/huey-forecast2.png">
-                        <img class="col-8 col-md-4 order-5 order-md-6" src="/images/project-images/huey-forecast3.png">
+                        <img class="col-10 col-md-4 mb-5 order-2 order-md-4"
+                            src="/images/project-images/huey-forecast1.png">
+                        <img class="col-10 col-md-4 mb-5 order-4 order-md-5"
+                            src="/images/project-images/huey-forecast2.png">
+                        <img class="col-10 col-md-4 mb-5 order-5 order-md-6"
+                            src="/images/project-images/huey-forecast3.png">
                     </div>
                 </div>
             </div>
             <div class="modal-footer">
                 <div class="col-12 d-flex justify-content-center">
-                    <div class="d-flex align-items-center footer-content">
-                        <a class="btn-primary mx-3" href="https://hueyweather.com/" target="_blank"
+                    <div class="d-flex flex-wrap align-items-center justify-content-center footer-content">
+                        <a class="btn-primary mx-1 mb-3" href="https://hueyweather.com/" target="_blank"
                             rel="noopener noreferrer">Try
                             HUEY
                             Live</a>
-                        <a class="btn-secondary" href="/index.html">Close Project</a>
+                        <a class="btn-secondary mx-1 mb-3" href="/index.html">Close Project</a>
                     </div>
                 </div>
             </div>
