--- a/projects/laysstaxwebsite.html
+++ b/projects/laysstaxwebsite.html
@@ -45,7 +45,7 @@
                 <div class="container-fluid">
                     <div class="col-12 d-flex justify-content-center">
                         <div class="col-12 col-lg-8">
-                            <div class="row mt-5 mb-5">
+                            <div class="row mt-3 mt-md-5 mb-5">
                                 <h2 class="modal-subhead">Challenge</h2>
                                 <div class="col-12">
                                     Create a standalone site for the Lay’s Stax brand incorporating engaging lifestyle
@@ -55,7 +55,7 @@
                             </div>
                             <div class="row mb-5">
                                 <h2 class="modal-subhead">My Role</h2>
-                                <div class="col-4">
+                                <div class="col-12 col-md-4">
                                     <ul>
                                         <li>Concepting</li>
                                         <li>Content Strategy</li>
@@ -63,7 +63,7 @@
                                         <li>UX/UI Design</li>
                                     </ul>
                                 </div>
-                                <div class="col-8">
+                                <div class="col-12 col-md-8">
                                     My role was to design the end-to-end customer experience, concept lifestyle collages
                                     associated with each product, and create the final production image assets to be
                                     handed off
@@ -84,13 +84,13 @@
                             collages
                         </h2>
                         <div class="col-12 col-md-10 d-flex flex-column">
-                            <img class="col-12" src="/images/project-images/stax-product1.png">
+                            <img class="col-12 mb-3" src="/images/project-images/stax-product1.png">
                         </div>
-                        <div class="col-12 col-md-5 d-flex flex-column">
-                            <img class="col-12" src="/images/project-images/stax-product2.png">
+                        <div class="col-6 col-md-5 d-flex flex-column">
+                            <img class="col-12 mb-3" src="/images/project-images/stax-product2.png">
                         </div>
-                        <div class="col-12 col-md-5 d-flex flex-column">
-                            <img class="col-12" src="/images/project-images/stax-product3.png">
+                        <div class="col-6 col-md-5 d-flex flex-column">
+                            <img class="col-12 mb-3" src="/images/project-images/stax-product3.png">
                         </div>
                     </div>
                     <div class="row py-5 mb-3 d-flex justify-content-center visual-design-image-container">
@@ -105,7 +105,7 @@
             <div class="modal-footer">
                 <div class="col-12 d-flex justify-content-center">
                     <div class="d-flex align-items-center footer-content">
-                        <a class="btn-secondary" href="/index.html">Close Project</a>
+                        <a class="btn-secondary mx-1 mb-3" href="/index.html">Close Project</a>
                     </div>
                 </div>
             </div>
