--- a/projects/monsterproject.html
+++ b/projects/monsterproject.html
@@ -45,7 +45,7 @@
                 <div class="container-fluid">
                     <div class="col-12 d-flex justify-content-center">
                         <div class="col-12 col-lg-8">
-                            <div class="row mt-5 mb-5">
+                            <div class="row mt-3 mt-md-5 mb-5">
                                 <h2 class="modal-subhead">Challenge</h2>
                                 <div class="col-12">
                                     Inspire kids.
@@ -78,11 +78,11 @@
                             Peprment is a “pestey”-eating monster who lives in “my backyard” and likes to “paly socer.”
                         </p>
                         <div class="col-10 col-md-5 d-flex flex-column">
-                            <img class="col-12 image-shadow"
+                            <img class="col-12 mb-4 image-shadow"
                                 src="/images/project-images/monsterproject/MID-Addie-Abowd1.png">
                         </div>
                         <div class="col-10 col-md-6 d-flex flex-column">
-                            <img class="col-12 image-shadow"
+                            <img class="col-12 mb-4 image-shadow"
                                 src="/images/project-images/monsterproject/MID-Addie-Abowd2.png">
                         </div>
                     </div>
@@ -137,11 +137,11 @@
                             The “toilet paper”-eating monster who lives “in the bathroom.”
                         </p>
                         <div class="col-10 col-md-5 d-flex flex-column">
-                            <img class="col-12 image-shadow"
+                            <img class="col-12 mb-4 image-shadow"
                                 src="/images/project-images/monsterproject/ABO-Max-Abowd1.png">
                         </div>
                         <div class="col-10 col-md-5 d-flex flex-column">
-                            <img class="col-12 image-shadow"
+                            <img class="col-12 mb-4 image-shadow"
                                 src="/images/project-images/monsterproject/ABO-Max-Abowd2.png">
                         </div>
                     </div>
@@ -154,11 +154,11 @@
                             “Lily is cute.”
                         </p>
                         <div class="col-10 col-md-5 d-flex flex-column">
-                            <img class="col-12 image-shadow"
+                            <img class="col-12 mb-4 image-shadow"
                                 src="/images/project-images/monsterproject/MAR-Gabriele-Abowd1.png">
                         </div>
                         <div class="col-10 col-md-5 d-flex flex-column">
-                            <img class="col-12 image-shadow"
+                            <img class="col-12 mb-4 image-shadow"
                                 src="/images/project-images/monsterproject/MAR-Gabriele-Abowd2.png">
                         </div>
                     </div>
@@ -169,11 +169,11 @@
                             Lydia eats “donutes” and lives “in the wotte.”
                         </p>
                         <div class="col-10 col-md-5 d-flex flex-column">
-                            <img class="col-12 image-shadow"
+                            <img class="col-12 mb-4 image-shadow"
                                 src="/images/project-images/monsterproject/TOR-Lillian-Abowd1.png">
                         </div>
                         <div class="col-10 col-md-5 d-flex flex-column">
-                            <img class="col-12 image-shadow"
+                            <img class="col-12 mb-4 image-shadow"
                                 src="/images/project-images/monsterproject/TOR-Lillian-Abowd2.png">
                         </div>
                     </div>
@@ -184,11 +184,11 @@
                             Likes to eat “pepoll” and lives (on) “Jooptre.”
                         </p>
                         <div class="col-10 col-md-5 d-flex flex-column">
-                            <img class="col-12 image-shadow"
+                            <img class="col-12 mb-4 image-shadow"
                                 src="/images/project-images/monsterproject/WRI-Jack-Abowd1.png">
                         </div>
                         <div class="col-10 col-md-5 d-flex flex-column">
-                            <img class="col-12 image-shadow"
+                            <img class="col-12 mb-4 image-shadow"
                                 src="/images/project-images/monsterproject/WRI-Jack-Abowd2.png">
                         </div>
                     </div>
@@ -200,11 +200,11 @@
                             swiming is and also she likes to dive.”
                         </p>
                         <div class="col-10 col-md-5 d-flex flex-column">
-                            <img class="col-12 image-shadow"
+                            <img class="col-12 mb-4 image-shadow"
                                 src="/images/project-images/monsterproject/ABO-Zoe-Abowd1.png">
                         </div>
                         <div class="col-10 col-md-5 d-flex flex-column">
-                            <img class="col-12 image-shadow"
+                            <img class="col-12 mb-4 image-shadow"
                                 src="/images/project-images/monsterproject/ABO-Zoe-Abowd2.png">
                         </div>
                     </div>
@@ -215,11 +215,11 @@
                             Jack likes to eat “freanch fries,” lives “in the woods,” and “likes to play hide and seek.”
                         </p>
                         <div class="col-10 col-md-5 d-flex flex-column">
-                            <img class="col-12 image-shadow"
+                            <img class="col-12 mb-4 image-shadow"
                                 src="/images/project-images/monsterproject/DEL-Liliana-Abowd1.png">
                         </div>
                         <div class="col-10 col-md-5 d-flex flex-column">
-                            <img class="col-12 image-shadow"
+                            <img class="col-12 mb-4 image-shadow"
                                 src="/images/project-images/monsterproject/DEL-Liliana-Abowd2.png">
                         </div>
                     </div>
@@ -231,11 +231,11 @@
                             because it “breths fiyre.”
                         </p>
                         <div class="col-10 col-md-5 d-flex flex-column">
-                            <img class="col-12 image-shadow"
+                            <img class="col-12 mb-4 image-shadow"
                                 src="/images/project-images/monsterproject/ABO-Sydney-Abowd1.png">
                         </div>
                         <div class="col-10 col-md-5 d-flex flex-column">
-                            <img class="col-12 image-shadow"
+                            <img class="col-12 mb-4 image-shadow"
                                 src="/images/project-images/monsterproject/ABO-Sydney-Abowd2.png">
                         </div>
                     </div>
@@ -248,11 +248,11 @@
                             because his “bake horn is mad out of litning.”
                         </p>
                         <div class="col-10 col-md-5 d-flex flex-column">
-                            <img class="col-12 image-shadow"
+                            <img class="col-12 mb-4 image-shadow"
                                 src="/images/project-images/monsterproject/ABO-Jude-Abowd1.png">
                         </div>
                         <div class="col-10 col-md-6 d-flex flex-column">
-                            <img class="col-12 image-shadow"
+                            <img class="col-12 mb-4 image-shadow"
                                 src="/images/project-images/monsterproject/ABO-Jude-Abowd2.png">
                         </div>
                     </div>
@@ -266,11 +266,11 @@
                             because “he is a soomowe resulr.”
                         </p>
                         <div class="col-10 col-md-5 d-flex flex-column">
-                            <img class="col-12 image-shadow"
+                            <img class="col-12 mb-4 image-shadow"
                                 src="/images/project-images/monsterproject/FAR-Owen-Abowd1.png">
                         </div>
                         <div class="col-10 col-md-5 d-flex flex-column">
-                            <img class="col-12 image-shadow"
+                            <img class="col-12 mb-4 image-shadow"
                                 src="/images/project-images/monsterproject/FAR-Owen-Abowd2.png">
                         </div>
                     </div>
@@ -284,11 +284,11 @@
                             because “it has long tentacles.”
                         </p>
                         <div class="col-10 col-md-5 d-flex flex-column">
-                            <img class="col-12 image-shadow"
+                            <img class="col-12 mb-4 image-shadow"
                                 src="/images/project-images/monsterproject/MAR-Joaquin-Abowd1.png">
                         </div>
                         <div class="col-10 col-md-6 d-flex flex-column">
-                            <img class="col-12 image-shadow"
+                            <img class="col-12 mb-4 image-shadow"
                                 src="/images/project-images/monsterproject/MAR-Joaquin-Abowd2.png">
                         </div>
                     </div>
@@ -300,11 +300,11 @@
                             What is special about Star you ask? Why “her dog,” of course!
                         </p>
                         <div class="col-10 col-md-5 d-flex flex-column">
-                            <img class="col-12 image-shadow"
+                            <img class="col-12 mb-4 image-shadow"
                                 src="/images/project-images/monsterproject/MAR-Nicanor-Abowd1.png">
                         </div>
                         <div class="col-10 col-md-5 d-flex flex-column">
-                            <img class="col-12 image-shadow"
+                            <img class="col-12 mb-4 image-shadow"
                                 src="/images/project-images/monsterproject/MAR-Nicanor-Abowd2.png">
                         </div>
                     </div>
@@ -326,7 +326,7 @@
             <div class="modal-footer">
                 <div class="col-12 d-flex justify-content-center">
                     <div class="d-flex align-items-center footer-content">
-                        <a class="btn-secondary" href="/index.html">Close Project</a>
+                        <a class="btn-secondary mx-1 mb-3" href="/index.html">Close Project</a>
                     </div>
                 </div>
             </div>
