--- a/projects/skylanders3Dadventure.html
+++ b/projects/skylanders3Dadventure.html
@@ -45,7 +45,7 @@
                 <div class="container-fluid">
                     <div class="col-12 d-flex justify-content-center">
                         <div class="col-12 col-lg-8">
-                            <div class="row mt-2 mb-5">
+                            <div class="row mt-3 mt-md-5 mb-5">
                                 <h2 class="modal-subhead">Problem</h2>
                                 <div class="col-12 mb-3">
                                     For parents with young children, keeping them entertained while shopping for
@@ -78,7 +78,7 @@
                             </div>
                             <div class="row mb-5">
                                 <h2 class="modal-subhead">My Role</h2>
-                                <div class="col-4">
+                                <div class="col-12 col-md-4">
                                     <ul>
                                         <li>Research</li>
                                         <li>Art Direction</li>
@@ -86,7 +86,7 @@
                                         <li>Content Strategy</li>
                                     </ul>
                                 </div>
-                                <div class="col-8">
+                                <div class="col-12 col-md-8">
                                     I worked collaboratively with another Art Director to develop an end-to-end
                                     interactive
                                     in-store experience. My role included initial research and concept development,
@@ -136,10 +136,10 @@
                             interact
                             with the in-store displays.
                         </p>
-                        <div class="col-6 col-md-4 d-flex flex-column">
+                        <div class="col-10 col-md-4 d-flex flex-column">
                             <img class="col-12" src="/images/project-images/skylanders3Dadventure1.png">
                         </div>
-                        <div class="col-6 col-md-4 d-flex flex-column">
+                        <div class="col-10 col-md-4 d-flex flex-column">
                             <img class="col-12" src="/images/project-images/skylanders3Dadventure2.png">
                         </div>
                     </div>
@@ -163,7 +163,7 @@
                             I designed a series of interactive in-store displays with directions, scan indicators, and
                             promotional products.
                         </p>
-                        <div class="col-10 d-flex flex-column">
+                        <div class="col-12 col-sm-10 d-flex flex-column">
                             <img class="col-12" src="/images/project-images/skylanders3Dadventure5.png">
                         </div>
                     </div>
@@ -173,7 +173,7 @@
                             We also created interactive packaging for customers to purchase, scan, and recreate the
                             experience at home.
                         </p>
-                        <div class="col-10 d-flex flex-column">
+                        <div class="col-12 col-sm-10 d-flex flex-column">
                             <img class="col-12" src="/images/project-images/skylanders3Dadventure6.png">
                         </div>
                     </div>
@@ -182,7 +182,7 @@
             <div class="modal-footer">
                 <div class="col-12 d-flex justify-content-center">
                     <div class="d-flex align-items-center footer-content">
-                        <a class="btn-secondary" href="/index.html">Close Project</a>
+                        <a class="btn-secondary mx-1 mb-3" href="/index.html">Close Project</a>
                     </div>
                 </div>
             </div>
