--- a/projects/visualdesign.html
+++ b/projects/visualdesign.html
@@ -43,7 +43,8 @@
             </div>
             <div class="modal-body w-100 d-flex justify-content-center">
                 <div class="container-fluid">
-                    <div class="row py-5 px-5 mt-5 mb-5 d-flex justify-content-center visual-design-image-container">
+                    <div
+                        class="row py-5 px-1 px-sm-5 mt-5 mb-5 d-flex justify-content-center visual-design-image-container">
                         <h2 class="mb-3 col-12 text-center project-title">Platform Launch Posters</h2>
                         <p class="col-12 text-center mt-0 mb-4">
                             Concepted and designed a series of posters advertising the launch of the Enterprise Account
@@ -72,7 +73,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row py-5 mt-5 mb-5 d-flex justify-content-center visual-design-image-container">
+                    <div
+                        class="row pt-5 pb-0 py-1 py-sm-5  mb-5 d-flex justify-content-center visual-design-image-container">
                         <h2 class="mb-3 col-12 text-center project-title">Design Rumble Logo</h2>
                         <p class="col-12 text-center mt-0 mb-3">
                             Concepted and designed a logo for a monthly design offsite event focused on skill building
@@ -96,7 +98,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row py-5 mt-5 mb-5 d-flex justify-content-center visual-design-image-container">
+                    <div
+                        class="row pt-5 py-1 py-sm-5 mt-5 mb-5 d-flex justify-content-center visual-design-image-container">
                         <h2 class="mb-3 col-12 text-center project-title">C3 Summit Event Design</h2>
                         <p class="col-12 text-center mt-0 mb-3">
                             Concepted and created event branding for the annual Capital One Collaborative Code Community
@@ -157,7 +160,8 @@
                         </div>
 
                     </div>
-                    <div class="row py-5 px-5 mt-5 mb-5 d-flex justify-content-center visual-design-image-container">
+                    <div
+                        class="row pt-5 pb-3 py-1 py-sm-5 mt-5 mb-5 d-flex justify-content-center visual-design-image-container">
                         <h2 class="mb-3 col-12 text-center project-title">Doritos Displays and Products</h2>
                         <p class="col-12 text-center mt-0 mb-0">
                             Concepted and designed in-store displays for the Doritos brand. The requirements for this
@@ -179,7 +183,8 @@
                             <img class="col-4" src="/images/project-images/visualdesign/dor-product3.png">
                         </div>
                     </div>
-                    <div class="row py-5 px-5 mt-5 mb-5 d-flex justify-content-center visual-design-image-container">
+                    <div
+                        class="row pt-5 pb-3 py-1 py-sm-5  mt-5 mb-5 d-flex justify-content-center visual-design-image-container">
                         <h2 class="mb-3 col-12 text-center project-title">Billion Dollar Bracket Promotion</h2>
                         <p class="col-12 text-center mt-0 mb-4">
                             Concepted and designed promotion logo and in-store display for a partnership between
@@ -192,17 +197,18 @@
                             <img src="/images/project-images/visualdesign/UL-BDB2.png">
                         </div>
                     </div>
-                    <div class="row py-5 px-5 mt-5 mb-5 d-flex justify-content-center visual-design-image-container">
+                    <div
+                        class="row pt-5 pb-3 py-1 py-sm-5  mt-5 mb-5 d-flex justify-content-center visual-design-image-container">
                         <h2 class="mb-3 col-12 text-center project-title">Lay’s In-Store Displays</h2>
                         <p class="col-12 text-center mt-0 mb-4">
                             Concepted and designed themed in-store product displays for the Lay’s brand. These concepts
                             were inspired by a corner market or convenience store and a music festival.
                         </p>
                         <div class="col-12 col-md-6 d-flex flex-column">
-                            <img class="image-shadow" src="/images/project-images/visualdesign/lays-display2.png">
+                            <img class="mb-4 image-shadow" src="/images/project-images/visualdesign/lays-display2.png">
                         </div>
                         <div class="col-12 col-md-6 d-flex flex-column">
-                            <img class="image-shadow" src="/images/project-images/visualdesign/lays-display1.png">
+                            <img class="mb-4 image-shadow" src="/images/project-images/visualdesign/lays-display1.png">
                         </div>
                     </div>
                     <div class="row py-5 mt-5 mb-5 d-flex justify-content-center visual-design-image-container">
@@ -221,7 +227,7 @@
             <div class="modal-footer">
                 <div class="col-12 d-flex justify-content-center">
                     <div class="d-flex align-items-center footer-content">
-                        <a class="btn-secondary" href="/index.html">Close Project</a>
+                        <a class="btn-secondary mx-1 mb-3" href="/index.html">Close Project</a>
                     </div>
                 </div>
             </div>
