--- a/projects/connectingflight.html
+++ b/projects/connectingflight.html
@@ -45,7 +45,7 @@
                 <div class="container-fluid">
                     <div class="col-12 d-flex justify-content-center">
                         <div class="col-12 col-lg-8">
-                            <div class="row mt-5 mb-5">
+                            <div class="row mt-3 mt-md-5 mb-5">
                                 <h2 class="modal-subhead">Problem</h2>
                                 <div class="col-12">
                                     Entertainment services on flights are notoriously unreliable, difficult to use, and
@@ -58,7 +58,7 @@
                             </div>
                             <div class="row mb-5">
                                 <h2 class="modal-subhead">My Role</h2>
-                                <div class="col-4">
+                                <div class="col-12 col-md-4">
                                     <ul>
                                         <li>Research</li>
                                         <li>Wireframing</li>
@@ -67,7 +67,7 @@
                                         <li>Art Direction</li>
                                     </ul>
                                 </div>
-                                <div class="col-8">
+                                <div class="col-12 col-md-8">
                                     My role was to work closely with our video and product teams to research, concept,
                                     and
                                     design an experience communicating the product vision to key stakeholders while
@@ -155,8 +155,8 @@
             </div>
             <div class="modal-footer">
                 <div class="col-12 d-flex justify-content-center">
-                    <div class="d-flex align-items-center footer-content">
-                        <a class="btn-secondary" href="/index.html">Close Project</a>
+                    <div class="d-flex flex-wrap align-items-center justify-content-center footer-content">
+                        <a class="btn-secondary mx-1 mb-3" href="/index.html">Close Project</a>
                     </div>
                 </div>
             </div>
