--- a/projects/shoppingmobileapp.html
+++ b/projects/shoppingmobileapp.html
@@ -45,7 +45,7 @@
                 <div class="container-fluid">
                     <div class="col-12 d-flex justify-content-center">
                         <div class="col-12 col-lg-8">
-                            <div class="row mt-5 mb-5">
+                            <div class="row mt-3 mt-md-5 mb-5">
                                 <h2 class="modal-subhead">Problem</h2>
                                 <div class="col-12">
                                     Capital One acquired Wikibuy in fall 2018 and I was brought on to lead the design
@@ -63,7 +63,7 @@
                             </div>
                             <div class="row mb-5">
                                 <h2 class="modal-subhead">My Role</h2>
-                                <div class="col-4">
+                                <div class="col-12 col-md-4">
                                     <ul>
                                         <li>Design Management</li>
                                         <li>Research</li>
@@ -73,7 +73,7 @@
                                         <li>Design System Development</li>
                                     </ul>
                                 </div>
-                                <div class="col-8">
+                                <div class="col-12 col-md-8">
                                     I worked closely with our product and research team to identify the
                                     largest opportunities for improving the overall customer experience and increase
                                     mobile purchases through our app. I led my design team into creating a series
@@ -158,7 +158,7 @@
                             <img class="col-12" src="/images/project-images/shopping-after.png">
                         </div>
                         <div class="col-12 d-flex flex-column flex-md-row justify-content-center my-3">
-                            <div class="col-12 col-md-6 d-flex flex-column px-5">
+                            <div class="col-12 col-md-6 d-flex flex-column px-0 px-md-5">
                                 <h2>Opportunities</h2>
                                 <ul>
                                     <li class="mb-2">
@@ -179,7 +179,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <div class="col-12 col-md-6 d-flex flex-column px-5">
+                            <div class="col-12 col-md-6 d-flex flex-column px-0 px-md-5">
                                 <h2>Highlights</h2>
                                 <ul>
                                     <li class="mb-2">
@@ -251,14 +251,15 @@
             </div>
             <div class="modal-footer">
                 <div class="col-12 d-flex justify-content-center">
-                    <div class="d-flex align-items-center footer-content">
-                        <a class="btn-primary" href="https://apps.apple.com/us/app/capital-one-shopping/id1089294040"
-                            target="_blank" rel="noopener noreferrer">Download
+                    <div class="d-flex flex-wrap align-items-center justify-content-center footer-content">
+                        <a class="btn-primary mx-1 mb-3"
+                            href="https://apps.apple.com/us/app/capital-one-shopping/id1089294040" target="_blank"
+                            rel="noopener noreferrer">Download
                             for iOS</a>
-                        <a class="btn-primary mx-3"
+                        <a class="btn-primary mx-1 mb-3"
                             href="https://play.google.com/store/apps/details?id=com.wikibuy.prod.main&hl=en_US&gl=US"
                             target="_blank" rel="noopener noreferrer">Download for Android</a>
-                        <a class="btn-secondary" href="/index.html">Close Project</a>
+                        <a class="btn-secondary mx-1 mb-3" href="/index.html">Close Project</a>
                     </div>
                 </div>
             </div>
